# Stock-Corporate-Action-Catcher

./: .env.example  .gitignore  AGENTS.md  AUTO_PUSH_README.md  README.md  auto_push.bat  auto_push.py  main.py  pyproject.toml  session-ses_26fd.md  test_mongo.py  test_scrapling.py
.kilo/plans/: 1777072389417-happy-lagoon.md
.qwen/agents/: CoderDev.md
agents/: data_collector.py  financial_expert.py
backend/: app.py
config/: settings.py
data/output/_debug/: page_initial_20260416_102006.html  page_initial_20260416_102215.html  page_initial_20260416_103620.html  page_initial_20260416_133405.html  page_initial_20260417_065408.html  page_initial_20260417_135133.html  page_initial_20260417_143825.html  page_initial_20260417_145032.html  page_initial_20260417_150902.html  page_initial_20260417_151433.html
frontend/: index.html  results.json
frontend/templates/: index.html
scripts/: atlas_connection_test.py  check_mongodb.py  debug_date.py  ingest_to_mongodb.py  simple_status.py  test_direct.py  test_mongodb_connection.py
tests/: test_financial_expert.py
